--- a/wvdial.conf
+++ b/wvdial.conf
@@ -1,16 +1,29 @@
 [Dialer Defaults]
-Modem = /dev/ttyUSB2
+Init1 = ATZ
+Init2 = ATQ0 V1 E1 S0=0 &C1 &D2 +FCLASS=0
+Init3 = AT+CGDCONT=1,"IP","gprs.oi.com.br"
 Modem Type = Analog Modem
 ISDN = 0
-Baud = 460800
-Dial Attempts = 1
-Username = user
-Password = pass
-Init1 = ATZ
-Init2 = AT&F &D2 &C1
-Init3 = ATS7=60 S30=0 S0=0
-Init4 = AT+CGDCONT=1,"IP","internet"
 Phone = *99***1#
-Stupid Mode = 1
+Modem = /dev/ttyUSB1
+Username = oi
+Password = oi
+Baud = 9600
 
-
+[Dialer 3g]
+Init1 = ATZ
+Init2 = ATQ0 V1 E1 S0=0 &C1 &D2
+Init3 = AT+CGDCONT=1,"IP","gprs.oi.com.br"
+Password = oi
+Check Def Route = on
+Phone = *99***1#
+Modem Type = Analog Modem
+Stupid mode = 1
+Baud = 921600
+Auto DNS = on
+DialCommand = ATDT
+Modem = /dev/ttyUSB2
+ISDN = 0
+Username = oi
+Auto Reconnect = off
+FlowControl = Hardware(CRTSCTS)
