--- a/i3status.conf
+++ b/i3status.conf
@@ -1,4 +1,3 @@
-
 general {
 #    output_format = "dzen2"
     colors = true
@@ -11,38 +10,53 @@ general {
 #order += "run_watch VPN"
 order += "wireless wlan0"
 order += "ethernet eth0"
+order += "ethernet tun0"
 order += "battery 0"
 #order += "cpu_temperature 0"
 order += "load"
+order += "volume master"
 order += "time"
 
+volume master {
+  format = "♪: %volume"
+  device = "default"
+  mixer = "Master"
+  mixer_idx = 0
+}
+
 wireless wlan0 {
-    format_up = "W: (%quality @ %essid, %bitrate) %ip"
+    format_up = "W:(%quality @ %essid, %bitrate) %ip"
     format_down = "W: down"
+}
+#VPN
+ethernet tun0 {
+   format_up = "V:%ip (%speed)"
+    format_down = "V: down"
 }
 
 ethernet eth0 {
     # if you use %speed, i3status requires the cap_net_admin capability
-    format_up = "E: %ip (%speed)"
+    format_up = "E:%ip (%speed)"
     format_down = "E: down"
 }
 
 battery 0 {
-    format = "%status %percentage %remaining"
+    format = "%status %percentage"
 #    path = "/sys/class/power_supply/BAT%d/uevent"
 }
- 
+
 run_watch DHCP {
     pidfile = "/var/run/dhclient*.pid"
 }
- 
+
 run_watch VPN {
     pidfile = "/var/run/vpnc/pid"
 }
- 
+
 time {
-    format = "%d-%m-%Y %H:%M:%S"
+    format = "%d/%m/%Y %H:%M"
 }
+
 load {
     format = "%1min"
 }
@@ -53,4 +67,3 @@ cpu_temperature 0 {
 disk "/home" {
     format = "%free"
 }
-
