add news shortcuts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,25 @@ set-window-option -g mode-keys vi
 set-window-option -g mode-mouse on
 
 #  Key bindings
-# shortcuts for common actions
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
 bind v new-window vim
 bind e new-window 'emacs -nw'
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+set-option -g mouse-select-pane on
+
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
 
 # copy/paste
 bind Escape copy-mode
@@ -63,9 +79,15 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-resurrect    \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-open       \
+  jbnicolai/tmux-urlview       \
 '
+
+# tmux-urlview
+set -g @urlview-key 'x'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
+
+source-file "${HOME}/.tmux/themepack/basic.tmuxtheme"
 
