--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,93 +1,128 @@
-#  General options
-set -g default-terminal "screen-256color"
-set -g bell-action none
-set -sg escape-time 1
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
-setw -g aggressive-resize on
-
-set-window-option -g mode-keys vi
-set-window-option -g mode-mouse on
-
-#  Key bindings
+# remap prefix to Control + a
 unbind C-b
 set -g prefix C-a
-bind C-a send-prefix
+#bind C-a send-prefix
+bind-key a send-prefix
 
-bind v new-window vim
-bind e new-window 'emacs -nw'
-
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-set-option -g mouse-select-pane on
-
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-
-# copy/paste
-bind Escape copy-mode
-bind p paste-buffer
-
-# reload config
+# force a reload of the config file
+unbind r
 bind r source-file ~/.tmux.conf
 
-#  Status bar
-set-option -g status-keys vi
-
 # colors
-setw -g monitor-activity on
-set -g visual-activity on
+#set -g default-terminal "screen-256color"
 
-# text
-set-option -g status-justify centre
-set-option -g status-interval 60
+# title
+set -g set-titles on
+set -g set-titles-string '#T'
 
-# window titles and indexes
-set  -g set-titles on
-setw -g automatic-rename
-set  -g base-index 1
-set -g renumber-windows on
-
-# tmux-open
-set -g @open 'x'
-set -g @open-editor 'C-x'
-
-# tmux-continuum
-set -g @continuum-restore 'on'
-
-# tmux-yank
-set -g @yank_selection 'primary'
-
-#  Panes
+# start window numbering at 1 for easier switching
+set -g base-index 1
 setw -g pane-base-index 1
 
-#  Sessions
-#bind -n M-Tab switch-client -n
+# unicode
+setw -g utf8 on
+set -g status-utf8 on
 
-# List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-yank       \
-  tmux-plugins/tmux-resurrect    \
-  tmux-plugins/tmux-continuum    \
-  tmux-plugins/tmux-open       \
-  jbnicolai/tmux-urlview       \
-'
+# status bar settings
+set -g status-bg black
+set -g status-fg green
+set -g status-left '#h:[#S][#10T]'
+set -g status-left-length 50
+set -g status-right-length 50
+#set -g status-right "⚡ #(~/bin/battery Discharging; ~/bin/battery Charging) %H:%M %d-%h-%Y"
+setw -g window-status-current-format "|#I:#W|"
+setw -g window-status-current-fg colour166
+setw -g window-status-current-bg black
+set-window-option -g automatic-rename off
 
-# tmux-urlview
-set -g @urlview-key 'x'
+# toggle the status bar
+bind b set -g status\; refresh-client -S
 
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+# border coloring for panes
+set-option -g pane-active-border-fg red
 
-source-file "${HOME}/.tmux/themepack/basic.tmuxtheme"
+# listen to alerts from all windows
+set -g bell-action any
+setw -g window-status-bell-bg white
+setw -g window-status-bell-fg red
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+#bind p previous-window
+
+# screen like window toggling
+bind Tab last-window
+
+# rebind pane tiling
+bind | split-window -h
+bind _ split-window
+
+# shortcuts for breaking and joining panes
+bind ^j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind ^s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+bind ^b break-pane
+
+# bind fast session switching
+unbind S
+bind S command-prompt "attach-session -d -t %1"
+
+# mouse related config
+set -g mouse-select-pane off
+set -g mode-mouse off
+
+# vim bindings
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# vim style buffer copy
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# buffer
+bind Space choose-buffer
+
+# bind resize commands to keys
+bind = resize-pane -D 5
+bind + resize-pane -U 5
+bind < resize-pane -L 5
+bind > resize-pane -R 5
+
+### COLOUR (Solarized light)
+# default statusbar colors
+set-option -g status-bg black #base2
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightyellow #base00
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg white #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg white #base2
+set-option -g pane-active-border-fg red #base1
+
+# message text
+set-option -g message-bg white #base2
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green
 
