--- a/.xombrero.conf
+++ b/.xombrero.conf
@@ -1,33 +1,34 @@
 #
 # - Xombrero configuration file
 #
-download_dir = ~/Downloads
 
 # Appearance
-#gui_mode = minimal
-#show_statusbar = no
-#show_scrollbars = no
-tabbar_font = cure 8
+gui_mode = minimal
+tabbar_font = hack 8
+history_autosave = 1
+
+# Download
+download_dir = ~/Downloads
+download_notification = 1
 
 # Functionality
 #enable_socket = yes
 #single_instance = yes
-spell_check_languages = en_GB
+spell_check_languages = pt_BR
 external_editor = vim
 
 # Key Bindings
-
-keybinding = :open ,a
-keybinding = :tabnew ,t
-keybinding = tabclose,d
+keybinding = :open,o
+keybinding = :tabnew,t
+keybinding = tabclose,w
 keybinding = reload,r
 keybinding = goback,C-o
 keybinding = goforward,C-i
 keybinding = stop,s
 keybinding = scrolldown,e
 keybinding = scrollup,i
-keybinding = scrollleft,n
-keybinding = scrollright,o
+#keybinding = scrollleft,n
+#keybinding = scrollright,o
 
 # Aliases
 alias = gl,https://google.com?q=%s
