removed show clock

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,128 +1,111 @@
-# remap prefix to Control + a
-unbind C-b
-set -g prefix C-a
-#bind C-a send-prefix
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# set window split
+bind-key v split-window -h
+bind-key b split-window
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+# clock
+set-window-option -g clock-mode-colour green #green
+
+set -g status-interval 1
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-right-length 140
+#set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]'
+#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]uptime:#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",")'
+#[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+
+# C-b is not acceptable -- Vim uses it
+set-option -g prefix C-a
+bind-key C-a last-window
+
+# Start numbering at 1
+set -g base-index 1
+
+# Allows for faster key repetition
+set -s escape-time 0
+
+# Rather than constraining window size to the maximum size of any client 
+# connected to the *session*, constrain window size to the maximum size of any 
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# another TMUX session
 bind-key a send-prefix
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
+# Activity monitoring
+setw -g monitor-activity on
+set -g visual-activity on
 
-# colors
-#set -g default-terminal "screen-256color"
-
-# title
-set -g set-titles on
-set -g set-titles-string '#T'
-
-# start window numbering at 1 for easier switching
-set -g base-index 1
-setw -g pane-base-index 1
-
-# unicode
-setw -g utf8 on
-set -g status-utf8 on
-
-# status bar settings
-set -g status-bg black
-set -g status-fg green
-set -g status-left '#h:[#S][#10T]'
-set -g status-left-length 50
-set -g status-right-length 50
-#set -g status-right "⚡ #(~/bin/battery Discharging; ~/bin/battery Charging) %H:%M %d-%h-%Y"
-setw -g window-status-current-format "|#I:#W|"
-setw -g window-status-current-fg colour166
-setw -g window-status-current-bg black
-set-window-option -g automatic-rename off
-
-# toggle the status bar
-bind b set -g status\; refresh-client -S
-
-# border coloring for panes
-set-option -g pane-active-border-fg red
-
-# listen to alerts from all windows
-set -g bell-action any
-setw -g window-status-bell-bg white
-setw -g window-status-bell-fg red
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
-#bind p previous-window
-
-# screen like window toggling
-bind Tab last-window
-
-# rebind pane tiling
-bind | split-window -h
-bind _ split-window
-
-# shortcuts for breaking and joining panes
-bind ^j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind ^s command-prompt -p "send pane to:"  "join-pane -t '%%'"
-bind ^b break-pane
-
-# bind fast session switching
-unbind S
-bind S command-prompt "attach-session -d -t %1"
-
-# mouse related config
-set -g mouse-select-pane off
-set -g mode-mouse off
-
-# vim bindings
+# Vi copypaste mode
 set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# hjkl pane traversal
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# vim style buffer copy
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# set to main-horizontal, 60% height for main pane
+bind m set-window-option main-pane-height 60\; select-layout main-horizontal
 
-# buffer
-bind Space choose-buffer
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
-# bind resize commands to keys
-bind = resize-pane -D 5
-bind + resize-pane -U 5
-bind < resize-pane -L 5
-bind > resize-pane -R 5
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-### COLOUR (Solarized light)
-# default statusbar colors
-set-option -g status-bg black #base2
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+# auto window rename
+set-window-option -g automatic-rename
 
-# default window title colors
-set-window-option -g window-status-fg brightyellow #base00
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+# rm mouse mode fail
+set -g mode-mouse off
 
-# active window title colors
-set-window-option -g window-status-current-fg white #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+# enable mouse select pane
+set -g mouse-select-pane on
 
-# pane border
-set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg red #base1
+# color
+set -g default-terminal "screen-256color"
 
-# message text
-set-option -g message-bg white #base2
-set-option -g message-fg brightred #orange
+# status bar
+set-option -g status-utf8 on
 
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+# https://github.com/edkolev/dots/blob/master/tmux.conf
+# Updates for tmux 1.9's current pane splitting paths.
 
-# clock
-set-window-option -g clock-mode-colour green
+# from powerline
+run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
 
+if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind c; bind c new-window -c "#{pane_current_path}"'
+if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind s; bind s split-window -v -c "#{pane_current_path}"'
+if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
+if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
+if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
