--- a/.i3/config
+++ b/.i3/config
@@ -34,7 +34,8 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec xterm
+#bindsym $mod+Return exec xterm
+bindsym $mod+Return exec urxvtc
 
 # lock screen
 bindsym $mod+Shift+w exec i3lock
@@ -43,7 +44,11 @@ bindsym $mod+Shift+w exec i3lock
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec j4-dmenu-desktop --dmenu="/usr/bin/rofi -dmenu -p 'apps:'"
+bindsym $mod+d exec rofi -show run
+bindsym $mod+Tab exec rofi -show window
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
