--- a/.config/snapwm/key.conf
+++ b/.config/snapwm/key.conf
@@ -1,17 +1,17 @@
 # Possible Mods are Alt, Control, CtrlAlt, ShftAlt, Super,
 #  ShftSuper, CtrlSuper, ALTSuper, NULL(for no Mod key)
-#
+
 # Set external commands ; use with spawn
-CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
+#CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
 CMD roficmd;rofi;-show;run;NULL;
-CMD xtermcmd;xterm;NULL;
 CMD terminal;urxvtc;NULL;
+
 # To quit the window manager and shutdown or reboot
 # "shutdowncmd" and "rebootcmd" are hardcoded so case matters
 # use with terminate(see bottom of this file)
 CMD shutdowncmd;sudo;shutdown;-P;now;NULL;
 CMD rebootcmd;sudo;reboot;NULL;
-#
+
 KEY Super;1;change_desktop;0;
 KEY Super;2;change_desktop;1;
 KEY Super;3;change_desktop;2;
@@ -22,10 +22,10 @@ KEY Super;7;change_desktop;6;
 KEY Super;8;change_desktop;7;
 KEY Super;9;change_desktop;8;
 KEY Super;0;change_desktop;9;
-#
+
 KEY Super;Right;rotate_desktop;1;
 KEY Super;Left;rotate_desktop;-1;
-#
+
 # Send an app to another desktop and follow it
 KEY ShftAlt;1;follow_client_to_desktop;0;
 KEY ShftAlt;2;follow_client_to_desktop;1;
@@ -37,7 +37,7 @@ KEY ShftAlt;7;follow_client_to_desktop;6;
 KEY ShftAlt;8;follow_client_to_desktop;7;
 KEY ShftAlt;9;follow_client_to_desktop;8;
 KEY ShftAlt;0;follow_client_to_desktop;9;
-#
+
 # Send an app to another desktop but dont't follow it
 KEY ShftSuper;1;client_to_desktop;0;
 KEY ShftSuper;2;client_to_desktop;1;
@@ -49,7 +49,7 @@ KEY ShftSuper;7;client_to_desktop;6;
 KEY ShftSuper;8;client_to_desktop;7;
 KEY ShftSuper;9;client_to_desktop;8;
 KEY ShftSuper;0;client_to_desktop;9;
-#
+
 KEY Super;a;rotate_mode;1;
 KEY Super;c;kill_client;
 KEY Super;j;next_win;
@@ -61,14 +61,11 @@ KEY Super;o;resize_stack;-10;
 KEY Super;r;pop_window;
 KEY Super;u;update_config;
 KEY Super;Tab;last_desktop;
-#
-# Shortcut for dmenu_run
-#KEY Alt;v;spawn;dmenucmd;
-#
+
 # Add/remove a window to/from the master area in vertical/horizontal mode
 KEY ShftAlt;m;more_master;1;
 KEY ShftAlt;l;more_master;-1;
-#
+
 # move windows
 KEY ShftSuper;k;move_down;10;
 KEY ShftSuper;j;move_up;-10;
@@ -77,30 +74,29 @@ KEY ShftSuper;p;move_right;10;
 KEY ShftSuper;Return;swap_master;
 
 # Switch tiling mode to vertical
-KEY ShftAlt;v;switch_mode;0;
+KEY ShftSuper;v;switch_mode;0;
 # Switch tiling mode to fullscreen
-KEY ShftAlt;f;switch_mode;1;
+KEY ShftSuper;f;switch_mode;1;
 # Switch tiling mode to horizontal
-KEY ShftAlt;h;switch_mode;2;
+KEY ShftSuper;h;switch_mode;2;
 # Switch tiling mode to grid
-KEY ShftAlt;g;switch_mode;3;
+KEY ShftSuper;g;switch_mode;3;
 # Switch tiling mode to center stacking
-KEY ShftAlt;c;switch_mode;4;
-#
+KEY ShftSuper;c;switch_mode;4;
+
 # Show/hide the bar
 KEY Super;b;toggle_bar;
-#
-# Shortcut for xterm
-#KEY Super;t;spawn;xtermcmd;
 
+# Shortcut for default terminal
 KEY Super;Return;spawn;terminal
 
+# Shortcut for rofi
 KEY Super;d;spawn;roficmd;
-#
+
 # Shortcut to exit the window manager
 KEY CtrlAlt;q;quit;
+
 # Close any open windows and reboot or shutdown
 # 1 to shutdown, 2 to reboot
 KEY CtrlAlt;s;terminate;1;
 KEY CtrlAlt;r;terminate;2;
-#
