enable mouse support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,11 +14,7 @@ bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-# rm mouse mode fail
-set -g mode-mouse off
-
-# enable mouse select pane
-set -g mouse-select-pane on
+set -g mouse on
 
 # open a man page in new window
 bind / command-prompt "split-window 'exec man %%'"
@@ -40,6 +36,7 @@ set -g set-titles on
 
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W"
+
 # statusbar
 
 set -g display-time 2000
@@ -67,7 +64,7 @@ set -g message-attr bright
 # center align the window list
 set -g status-justify centre
 
-# show some useful stats but only when tmux is started 
+# show some useful stats but only when tmux is started
 # outside of Xorg, otherwise dwm statusbar shows these already
 set -g status-right ""
 set -g status-left ""
