added volume control and icone for status battery

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -17,6 +17,7 @@ general {
 #order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "volume master"
 order += "battery 0"
 order += "load"
 order += "tztime local"
@@ -33,7 +34,13 @@ ethernet _first_ {
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+        format = "%status %percentage %remaining %emptytime"
+        format_down = "No battery"
+        status_chr = "⚇ CHR"
+        status_bat = "⚡ BAT"
+        status_full = "☻ FULL"
+        path = "/sys/class/power_supply/BAT1/uevent"
+        low_threshold = 10
 }
 
 run_watch DHCP {
@@ -55,4 +62,12 @@ load {
 
 disk "/" {
         format = "%avail"
+}
+
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
