--- a/.i3/config
+++ b/.i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
-#font pango:Terminus 11px
+font pango:Terminus 11px
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -36,7 +36,7 @@ floating_modifier $mod
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec xterm
 bindsym $mod+Return exec urxvtc
-
+bindsym $mod+Shift+Return exec urxvtc -e zsh -c "tmuxp load ~/.tmuxp/default.yaml"
 # lock screen
 bindsym $mod+Shift+w exec i3lock
 
