--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,121 +15,73 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 set -g mouse on
+set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set-option -ga terminal-overrides ",$TERM:Tc"
 
-# open a man page in new window
-bind / command-prompt "split-window 'exec man %%'"
-
-# quick view of processes
-bind '~' split-window "exec htop"
+set -g default-command $SHELL
+set -g default-shell /usr/bin/zsh
 
 # listen for activity on all windows
 set -g bell-action any
 
 # on-screen time for display-panes in ms
 set -g display-panes-time 2000
+set -g display-time 2000
 
 # start window indexing at one instead of zero
 set -g base-index 1
 
 # enable wm window titles
-set -g set-titles on
+#set -g set-titles on
 
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W"
 
-set -g display-time 2000
+set -g pane-active-border-fg red
+set -g pane-active-border-bg default
+set -g pane-border-fg black
+set -g pane-border-bg default
+
+set -g status-interval 2
+set -g status-position bottom
+set -g status-justify left
+set -g status-left ''
+set -g status-right '#[fg=default,bg=black] #[bg=default] #[bg=black] #(exec uptime | cut -d "," -f 3- | cut -d ":" -f2 | sed -e "s/^[ \t]*//") #[bg=default] #[bg=black] #[bg=default]'
+
+set -g status-bg default
+set -g status-fg default
+
+set -g status-style 'bg=default,fg=brightwhite'
+
+setw -g window-status-current-bg default
+setw -g window-status-current-fg default
+setw -g window-status-current-attr none
+
+setw -g window-status-bg default
+setw -g window-status-fg default
+setw -g window-status-attr dim
+
+setw -g window-status-format '#[bg=black] #I #[bg=default]'
+setw -g window-status-current-format '#[fg=#ffffff,bg=red]#[fg=bright] #I '
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'thewtex/tmux-mem-cpu-load'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-
-## Status bar design
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
-
-# Info on left (I don't have a session display for now)
-set -g status-left ''
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @prefix_highlight_show_copy_mode 'on'
 
 # loud or quiet?
 set-option -g visual-activity off
 set-option -g visual-bell off
 set-option -g visual-silence off
-set-window-option -g monitor-activity off
 set-option -g bell-action none
+#set-window-option -g monitor-activity off
 
-set -g default-terminal "screen-256color"
+set-window-option -g automatic-rename on
+set-window-option -g aggressive-resize on
+set-window-option -g monitor-activity on
 
-# modes
-#setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
-
-# panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
-
-# statusbar
-set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-right '#(rainbarf --rgb)'
-#set -g status-attr dim
-#set -g status-left ''
-#set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-#set -g status-right-length 50
-#set -g status-left-length 20
-
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
-
-# messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
