--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,69 +1,58 @@
+new-session                       # Start a new session if none available
 
-# set bindkey for C-a
-set-option -g prefix C-a
-bind-key C-a last-window
+# keybinds
+#set -g prefix C-a
+set -g prefix `                   # use tilde key as prefix
+bind `     send-key `             # insert tilde by pressing twice
+bind ,     previous-window
+bind .     next-window
+bind <     swap-window -t :-
+bind >     swap-window -t :+
+bind |     split-window -h        # split into left and right panes
+bind \     split-window -h
+bind -     split-window -v        # split into top and bottom panes
+bind o     rotate-window          # rotate panes around in current window
+bind Left  resize-pane -L 5
+bind Right resize-pane -R 5
+bind Up    resize-pane -U 5
+bind Down  resize-pane -D 5
+bind v     select-layout even-horizontal
+bind V     select-layout main-vertical
+bind h     select-layout even-vertical
+bind H     select-layout main-horizontal
+bind t     select-layout tiled
+bind n     command-prompt 'rename-window %%'
+bind N     command-prompt 'rename-session %%'
+bind x     kill-pane
+bind X     kill-window
+bind r     source-file ~/.tmux.conf \; display-message " * reloaded ~/.tmux.conf"
+#bind w     run "~/bin/tmux-copy"
+#bind y     run "~/bin/tmux-paste"
 
-# toggle statusbar
-bind-key b set-option status
+# behavior
+set  -g base-index 1          # start window numbering from 1 instead of 0
+setw -g automatic-rename on   # automatically name windows
+set  -g set-titles on         # auto set the terminal's window title
+setw -g mode-mouse on         # copy with mouse in copy mode
+set  -g mouse-select-pane on  # let mouse switch panes
+set  -g mouse-resize-pane on
+set  -g mouse-select-window on
 
-# vim style buffer copy
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-
-set -g mouse on
-set -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set-option -ga terminal-overrides ",$TERM:Tc"
-
-set -g default-command $SHELL
-set -g default-shell /usr/bin/zsh
-
-# listen for activity on all windows
-set -g bell-action any
-
-# on-screen time for display-panes in ms
-set -g display-panes-time 2000
-set -g display-time 2000
-
-# start window indexing at one instead of zero
-set -g base-index 1
-
-# enable wm window titles
-#set -g set-titles on
-
-# wm window title string (uses statusbar variables)
-set -g set-titles-string "tmux.#I.#W"
-
-set -g pane-active-border-fg red
-set -g pane-active-border-bg default
-set -g pane-border-fg black
-set -g pane-border-bg default
-
-set -g status-interval 2
-set -g status-position bottom
-set -g status-justify left
-set -g status-left ''
-set -g status-right '#[fg=default,bg=black] #[bg=default] #[bg=black] #(exec uptime | cut -d "," -f 3- | cut -d ":" -f2 | sed -e "s/^[ \t]*//") #[bg=default] #[bg=black] #[bg=default]'
-
-set -g status-bg default
-set -g status-fg default
-
-set -g status-style 'bg=default,fg=brightwhite'
-
-setw -g window-status-current-bg default
-setw -g window-status-current-fg default
-setw -g window-status-current-attr none
-
-setw -g window-status-bg default
-setw -g window-status-fg default
-setw -g window-status-attr dim
-
-setw -g window-status-format '#[bg=black] #I #[bg=default]'
-setw -g window-status-current-format '#[fg=#ffffff,bg=red]#[fg=bright] #I '
+# appearance
+set  -g default-terminal "screen-256color"      # full colors for apps
+set  -g status-left-length 45
+set  -g status-left '⣿ #[underscore]#[default]:#[fg=black]#S#[default] ⡇'
+set  -g status-right ' ⣿ '
+setw -g window-status-format ' #I #W '          # window name formatting
+setw -g window-status-current-format ' #I #W '
+set  -g status-bg colour3                       # dark yellow status bar
+setw -g window-status-bg colour240              # dark grey window name bg
+setw -g window-status-fg white
+setw -g window-status-current-bg red            # red bg for active window
+setw -g window-status-current-fg white
+setw -g window-status-current-attr bold
+setw -g window-status-attr bold
+set  -g set-titles-string '[#I] #W'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
