--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,18 +16,20 @@ bind Left  resize-pane -L 5
 bind Right resize-pane -R 5
 bind Up    resize-pane -U 5
 bind Down  resize-pane -D 5
-bind v     select-layout even-horizontal
-bind V     select-layout main-vertical
-bind h     select-layout even-vertical
-bind H     select-layout main-horizontal
-bind t     select-layout tiled
+bind h     select-pane -L
+bind j     select-pane -D
+bind k     select-pane -U
+bind l      select-pane -R
+#bind v     select-layout even-horizontal
+#bind V     select-layout main-vertical
+#bind h     select-layout even-vertical
+#bind H     select-layout main-horizontal
+#bind t     select-layout tiled
 bind n     command-prompt 'rename-window %%'
 bind N     command-prompt 'rename-session %%'
 bind x     kill-pane
 bind X     kill-window
 bind r     source-file ~/.tmux.conf \; display-message " * reloaded ~/.tmux.conf"
-#bind w     run "~/bin/tmux-copy"
-#bind y     run "~/bin/tmux-paste"
 
 # behavior
 set  -g base-index 1          # start window numbering from 1 instead of 0
