--- a/.gitconfig
+++ b/.gitconfig
@@ -2,23 +2,36 @@
     name = Diogo Leal
     email = diogo@diogoleal.com
     signingkey = 4D7CF362
-
-[color]
-    branch = auto
-    diff = auto
-    interactive = auto
-    status = auto
-
+# [color]
+#    branch = auto
+#    diff = auto
+#    interactive = auto
+#    status = auto
 [core]
     editor = vim
     pager = less -FXRS
 
 [merge]
     tool = vimdiff
-
+    conflictstyle = diff3
 [push]
     default = simple
-
+[init]
+    templateDir = /home/diogo/.git-template
+    defaultBranch = main
+[url "https://"]
+    insteadOf = git://
+[interactive]
+    diffFilter = delta --color-only
+[add.interactive]
+    useBuiltin = false # required for git 2.37.0
+[delta]
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+[diff]
+    colorMoved = default
+[pull]
+    rebase = false
 [alias]
     a = add --all
     ai = add -i
