removed deprecated conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-new-session                       # Start a new session if none available
+#new-session                       # Start a new session if none available
 
 # keybinds
 #set -g prefix C-a
@@ -35,10 +35,6 @@ bind r     source-file ~/.tmux.conf \; display-message " * reloaded ~/.tmux.conf
 set  -g base-index 1          # start window numbering from 1 instead of 0
 setw -g automatic-rename on   # automatically name windows
 set  -g set-titles on         # auto set the terminal's window title
-setw -g mode-mouse on         # copy with mouse in copy mode
-set  -g mouse-select-pane on  # let mouse switch panes
-set  -g mouse-resize-pane on
-set  -g mouse-select-window on
 
 # appearance
 set  -g default-terminal "screen-256color"      # full colors for apps
@@ -48,12 +44,6 @@ set  -g status-right ' ⣿ '
 setw -g window-status-format ' #I #W '          # window name formatting
 setw -g window-status-current-format ' #I #W '
 set  -g status-bg colour3                       # dark yellow status bar
-setw -g window-status-bg colour240              # dark grey window name bg
-setw -g window-status-fg white
-setw -g window-status-current-bg red            # red bg for active window
-setw -g window-status-current-fg white
-setw -g window-status-current-attr bold
-setw -g window-status-attr bold
 set  -g set-titles-string '[#I] #W'
 
 # List of plugins
