--- a/.gitconfig
+++ b/.gitconfig
@@ -8,9 +8,10 @@
 #    interactive = auto
 #    status = auto
 [core]
-    editor = emacsclient
+    editor = nvim
     #pager = less -FXRS
     pager = delta
+    autocrlf = input
 [merge]
     #tool = vimdiff
     conflictstyle = diff3
@@ -24,7 +25,7 @@
 [interactive]
     diffFilter = delta --color-only
 [add.interactive]
-    useBuiltin = false # required for git 2.37.0
+    useBuiltin = false
 [delta]
     navigate = true    # use n and N to move between diff sections
     light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
