--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -5,7 +5,7 @@
     visible_bell = True
     background_color = "#fbf1c7"
     cursor_shape = ibeam
-    font = JetBrainsMonoNL NFM 14
+    font = Noto Sans Mono 16
     foreground_color = "#3c3836"
     scrollbar_position = hidden
     scrollback_infinite = True
