--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 [core]
     editor = nvim
     #pager = less -FXRS
-    pager = delta
+    # pager = delta
     autocrlf = input
 [merge]
     #tool = vimdiff
@@ -22,15 +22,15 @@
     defaultBranch = main
 [url "https://"]
     insteadOf = git://
-[interactive]
-    diffFilter = delta --color-only
-[add.interactive]
-    useBuiltin = false
-[delta]
-    navigate = true    # use n and N to move between diff sections
-    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
-[diff]
-    colorMoved = default
+# [interactive]
+#     diffFilter = delta --color-only
+# [add.interactive]
+#     useBuiltin = false
+# [delta]
+#     navigate = true    # use n and N to move between diff sections
+#     light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+# [diff]
+#     colorMoved = default
 [pull]
     rebase = false
 [alias]
@@ -163,3 +163,57 @@
     human = name-rev --name-only --refs=refs/heads/*
     serve = !git daemon --reuseaddr --verbose  --base-path=. --export-all ./.git
     snapshot = !git stash save "snapshot: $(date)" && git stash apply "stash@{0}"
+
+
+# INCLUDES
+# --------
+# Local/Private config goes in the include
+[include]
+  path = ~/.gitconfig.local
+# URL ALIASES
+# -----------
+# Alias for Dracula Org repositories
+[url "https://github.com/dracula/"]
+  insteadOf = dracula://
+# COLORS
+# ------
+# Dracula Dark Theme
+[color]
+  ui = auto
+[color "branch"]
+  current = cyan bold reverse
+  local = white
+  plain =
+  remote = cyan
+[color "diff"]
+  commit =
+  func = cyan
+  plain =
+  whitespace = magenta reverse
+  meta = white
+  frag = cyan bold reverse
+  old = red
+  new = green
+[color "grep"]
+  context =
+  filename =
+  function =
+  linenumber = white
+  match =
+  selected =
+  separator =
+[color "interactive"]
+  error =
+  header =
+  help =
+  prompt =
+[color "status"]
+  added = green
+  changed = yellow
+  header =
+  localBranch =
+  nobranch =
+  remoteBranch = cyan bold
+  unmerged = magenta bold reverse
+  untracked = red
+  updated = green bold
