removed and add new packages, fix go install and fixed dashboard on emacs

--- a/.gitconfig
+++ b/.gitconfig
@@ -221,4 +221,7 @@
   untracked = red
   updated = green bold
 [credential]
-	helper = store
+	helper = cache
+[user]
+	email = diogo.andrade@redspark.io
+	name = Diogo Leal Andrade
