--- a/.gitconfig
+++ b/.gitconfig
@@ -222,6 +222,9 @@
   updated = green bold
 [credential]
 	helper = cache
+#[user]
+#	email = diogo.andrade@redspark.io
+#	name = Diogo Leal Andrade
 [user]
-	email = diogo.andrade@redspark.io
-	name = Diogo Leal Andrade
+	name = Diogo
+	email = diogo@diogoleal.com
