added emacs service

--- a/.config/systemd/user/emacs.service
+++ b/.config/systemd/user/emacs.service
@@ -1,12 +1,14 @@
 [Unit]
 Description=Emacs text editor
 Documentation=info:emacs man:emacs(1) https://gnu.org/software/emacs/
+After=network.target
 
 [Service]
 Type=forking
 ExecStart=/usr/bin/emacs --daemon
 ExecStop=/usr/bin/emacsclient --eval "(kill-emacs)"
 Environment=SSH_AUTH_SOCK=%t/keyring/ssh
+Environment=XDG_RUNTIME_DIR=/run/user/%U
 Restart=on-failure
 
 [Install]
