cleanup kitty.conf and change shortcut for close window

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,13 +10,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 font_size        12.0
-
-#font_family      monospace
-#bold_font        auto
-#italic_font      auto
-#bold_italic_font auto
-font_size 12
-force_ltr no
+force_ltr        no
 adjust_line_height  115%
 # adjust_column_width 100%
 # adjust_baseline 0
@@ -35,9 +29,8 @@ box_drawing_scale 0.001, 1, 1.5, 2
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
 
-#: }}}
 
-#: Cursor customization {{{
+#: Cursor customization
 cursor #bbbbbb
 cursor_text_color #111111
 cursor_shape beam
@@ -45,19 +38,17 @@ cursor_beam_thickness 1.1
 cursor_underline_thickness 2.0
 cursor_blink_interval -1
 cursor_stop_blinking_after 15.0
-#: }}}
 
-#: Scrollback {{{
+
+#: Scrollback
 scrollback_lines 50000
 scrollback_pager less -R -F
 # scrollback_pager_history_size 0
 # scrollback_fill_enlarged_window no
 wheel_scroll_multiplier 5.0
 # touch_scroll_multiplier 1.0
-#: }}}
 
-#: Mouse {{{
-
+#: Mouse
 mouse_hide_wait 3.0
 url_color #23FD00
 url_style single
@@ -164,28 +155,21 @@ pointer_shape_when_dragging beam
 #: Select from the clicked point to the end of the line
 
 # mouse_map shift+right press ungrabbed,grabbed mouse_selection extend
-#: }}}
 
-#: }}}
 
-#: Performance tuning {{{
-
+#: Performance tuning
 repaint_delay 10
 input_delay 3
 sync_to_monitor yes
 
-#: }}}
-
-#: Terminal bell {{{
+#: Terminal bell
 enable_audio_bell no
 visual_bell_duration 0.0
 window_alert_on_bell no
 # bell_on_tab yes
 # command_on_bell none
-#: }}}
 
-#: Window layout {{{
-
+#: Window layout
 remember_window_size   no
 initial_window_width   1460
 initial_window_height  750
@@ -209,7 +193,7 @@ inactive_border_color #777777
 # confirm_os_window_close 0
 #: }}}
 
-#: Tab bar {{{
+#: Tab bar
 tab_bar_edge bottom
 # tab_bar_margin_width 0.0
 # tab_bar_margin_height 0.0 0.0
@@ -252,12 +236,11 @@ inactive_tab_background #262626
 inactive_tab_font_style italic
 
 #: Tab bar colors and styles
-
 # tab_bar_background none
 #tab_bar_margin_color none
-#: }}}
 
-#: Color scheme {{{
+
+#: Color scheme
 background_opacity 1.0
 #background_opacity 1
 # background_image /home/proxzima/Pictures/ilya.png
@@ -314,17 +297,13 @@ selection_foreground none
 #: Color for marks of type 3
 # mark3_background #f274bc
 #: Color for marks of type 3 (violet)
-#: }}}
 
-#: }}}
-
-#: Advanced {{{
-
+#: Advanced
 shell_integration enabled
 shell .
 editor emacs -nw
 close_on_child_death no
-allow_remote_control no
+allow_remote_control yes
 #: setting.
 
 # listen_on none
@@ -364,10 +343,9 @@ update_check_interval 0
 allow_hyperlinks yes
 #term xterm-kitty
 #term xterm-256color
-#: }}}
 
-#: Keyboard shortcuts {{{
 
+#: Keyboard shortcuts
 map ctrl+v                  paste_from_clipboard
 map ctrl+c                  copy_and_clear_or_interrupt
 map ctrl+backspace          send_text           all \x17
@@ -385,7 +363,7 @@ map ctrl+shift+h            show_scrollback
 
 # Window management
 map ctrl+shift+n            new_os_window
-map ctrl+w                  close_window
+map ctrl+shift+w            close_window
 map ctrl+enter              no_op
 map ctrl+]                  next_window
 map ctrl+[                  previous_window
@@ -401,12 +379,11 @@ map alt+6                   sixth_window
 map alt+7                   seventh_window
 map alt+8                   eighth_window
 map alt+9                   ninth_window
-map ctrl+shift+x toggle_fullscreen
-map ctrl+shift+enter new_window_whith_cwd
+map ctrl+shift+x            toggle_fullscreen
+map ctrl+shift+enter        new_window_whith_cwd
 map ctrl+-                  launch              --location=hsplit
 map ctrl+|                  launch              --location=vsplit
 map F8                      layout_action       rotate
-#Se cambian lo que tiene
 map shift+up                move_window         up
 map shift+left              move_window         left
 map shift+right             move_window         right
@@ -430,7 +407,9 @@ map ctrl+shift+,            move_tab_backward
 map ctrl+KP_Add             increase_font_size
 map ctrl+KP_Subtract        decrease_font_size
 map ctrl+KP_0               restore_font_size
-map ctrl+f                 launch --location=hsplit --allow-remote-control kitty +kitten search.py @active-kitty-window-id
+#map ctrl+f                  search
+map ctrl+f                  show_scrollback search
+
 map f5                      load_config_file
 map f6                      debug_config
 map f3                      launch_tab emacs
